test/corpus/gcode_from_slicer.txt
==================
Slicer values without a leading zero
==================

G1 X10.5 Y-3 E.24 F1200
G1 Z.8 E-.02

---

(source_file
    (command
        (gcode
            (gcode_letter)
            (gcode_number)
        )
        (arg
            (arg_letter)
            (arg_value
                (number)
            )
        )
        (arg
            (arg_letter)
            (arg_value
                (number)
            )
        )
        (arg
            (arg_letter)
            (arg_value
                (number)
            )
        )
        (arg
            (arg_letter)
            (arg_value
                (number)
            )
        )
    )
    (command
        (gcode
            (gcode_letter)
            (gcode_number)
        )
        (arg
            (arg_letter)
            (arg_value
                (number)
            )
        )
        (arg
            (arg_letter)
            (arg_value
                (number)
            )
        )
    )
)

==================
Version strings stay a single string value
==================

M115 U3.13.2

---

(source_file
    (command
        (gcode
            (gcode_letter)
            (gcode_number)
        )
        (arg
            (arg_letter)
            (arg_value
                (string)
            )
        )
    )
)

==================
Debug D codes
==================

D80 P0

---

(source_file
    (command
        (gcode
            (gcode_letter)
            (gcode_number)
        )
        (arg
            (arg_letter)
            (arg_value
                (number)
            )
        )
    )
)

==================
Blank lines between commands
==================

G28

G1 X0

---

(source_file
    (command
        (gcode
            (gcode_letter)
            (gcode_number)
        )
    )
    (command
        (gcode
            (gcode_letter)
            (gcode_number)
        )
        (arg
            (arg_letter)
            (arg_value
                (number)
            )
        )
    )
)

==================
Known limitation: values containing spaces
==================

M486 Auniversal wall mount hole.stl

---

(source_file
    (ERROR
        (command
            (gcode
                (gcode_letter)
                (gcode_number)
            )
            (arg
                (arg_letter)
                (arg_value
                    (string)
                )
            )
        )
        (UNEXPECTED 'w')
        (UNEXPECTED 'm')
        (UNEXPECTED 'h')
    )
)
