test/corpus/gcode_with_flag_groups.txt
==================
Axis letters written together are separate flags
==================

G28 XY S
M84 X Y E

---

(source_file
    (command
        (gcode
            (gcode_letter)
            (gcode_number)
        )
        (arg
            (arg_letter)
        )
        (arg
            (arg_letter)
        )
        (arg
            (arg_letter)
        )
    )
    (command
        (gcode
            (gcode_letter)
            (gcode_number)
        )
        (arg
            (arg_letter)
        )
        (arg
            (arg_letter)
        )
        (arg
            (arg_letter)
        )
    )
)

==================
A bare flag does not take the next argument as its value
==================

M106 P5 R A125 B10

---

(source_file
    (command
        (gcode
            (gcode_letter)
            (gcode_number)
        )
        (arg
            (arg_letter)
            (arg_value
                (number)
            )
        )
        (arg
            (arg_letter)
        )
        (arg
            (arg_letter)
            (arg_value
                (number)
            )
        )
        (arg
            (arg_letter)
            (arg_value
                (number)
            )
        )
    )
)
