test/corpus/gcode_with_just_letter_args.txt
==================
GCode with only single letter args
==================

M84 E

---

(source_file
    (command
        (gcode
            (gcode_letter)
            (gcode_number)
        )
        (arg
            (arg_letter)
        )
    )
)
